--- a/nginx.vh.default.conf
+++ b/nginx.vh.default.conf
@@ -59,5 +59,6 @@ server {
 		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
                 proxy_read_timeout 86400s;
                 proxy_send_timeout 86400s;
+                proxy_buffering off;
 	}
 }
